# gabe

./: .gitignore  README.md  biome.json  markov.py  pyproject.toml
reports/: markov_report.md  shapley_report.md
src/attribution/: __init__.py  data.py
src/markov_analysis/: __init__.py  __main__.py  cli.py  model.py  report.py
src/shapley_analysis/: __init__.py  __main__.py  cli.py  model.py  report.py
