[project]
name = "gabe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "ruff>=0.13.1",
    "tabulate>=0.9.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.isort]
known-first-party = ["markov_analysis"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
